_BACKUP/z_HTML-VERSIONS/version2/bgoonz42.gitbook.io/datastructures-in-pytho/cirriculumn/untitled-2/untitled-1.md
<a href="../../index.html" class="link-a079aa82--primary-53a25e66--logoLink-10d08504"></a>

<img src="https://gblobscdn.gitbook.com/spaces%2F-Mij72ebV4OjqJvBacMy%2Favatar-rectangle-1630798188535.png?alt=media" class="image-67b14f24--logo-35ac2404--small-5fbe8ad7" />

<a href="../../index.html" class="link-a079aa82--primary-53a25e66--logoLink-10d08504"></a>

<img src="https://gblobscdn.gitbook.com/spaces%2F-Mij72ebV4OjqJvBacMy%2Favatar-rectangle-1630798188535.png?alt=media" class="image-67b14f24--logo-35ac2404--medium-5fbe8af6" />

<a href="https://bgoonz-blog.netlify.app/#gsc.tab=0" class="button-36063075--medium-6e2a217a--button-195c575e--linkButton-67c61496--links-282dde1f"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1--text-8ee2c8b2"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Main Blog</span></span></a>

<a href="https://www.notion.so/webdevhub42/Python-Data-Structures-Unit-1da9a5d55db844f4b62aff6fd2b4d1ce" class="button-36063075--medium-6e2a217a--button-195c575e--linkButton-67c61496--links-282dde1f"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1--text-8ee2c8b2"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Notion Notes</span></span></a>

<a href="https://bgoonz-branch-the-algos.vercel.app/" class="button-36063075--medium-6e2a217a--button-195c575e--linkButton-67c61496--links-282dde1f"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1--text-8ee2c8b2"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">The Algorithms</span></span></a>

<a href="https://thealgorithms.netlify.app/#" class="button-36063075--medium-6e2a217a--button-195c575e--linkButton-67c61496--links-282dde1f"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1--text-8ee2c8b2"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Python Module Website</span></span></a>

<a href="../../index.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Home</span></a>

<a href="../../navigation.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Navigation</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Cirriculumn</span></span>

<a href="../untitled.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Outline</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">wk17</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">wk18</span>

<a href="untitled-4.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Outline-W-18</span></a>

<a href="untitled-3.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">D1- Module 01 - Number Bases and Character Encoding</span></a>

<a href="untitled-2.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">D2- Module 02 - Hash Tables I</span></a>

<a href="untitled-1.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca--navButtonOpened-6a88552e"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">D3-Module 03 - Hash Tables II</span></a>

<a href="untitled.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">D4- Module 04 - Searching and Recursion</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">wk19</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">wk20</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Utilities</span></span>

<a href="../../utilities/code-lab-notebooks.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Code lab Notebooks</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Repl.IT</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Utilites</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">practice</span></span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Supplemental Practice:</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Abstract Data Structures:</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Resources</span></span>

<a href="../../resources/python-vs-javascript.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python VS JavaScript</span></a>

<a href="../../resources/untitled-1.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Misc. Resources</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Things To Internalize:</span>

<a href="../../resources/intro-to-python-w-jupyter-notebooks.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Intro To Python w Jupyter Notebooks</span></a>

<a href="../../resources/calculating-big-o.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Calculating Big O</span></a>

<a href="../../resources/python-cheat-sheet.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python Cheat Sheet</span></a>

<a href="../../resources/code-signal-cga-sprint-resources.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Code Signal CGA Sprint Resources</span></a>

<a href="../../resources/youtube.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Youtube</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Useful Links</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">quick-reference</span></span>

<a href="../../misc/untitled/python-snippets.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python Snippets</span></a>

<a href="../../quick-reference/python-module-index.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python Module Index:</span></a>

<a href="../../quick-reference/untitled.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Useful Info</span></a>

<a href="../../quick-reference/python-glossary.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python Glossary</span></a>

<a href="../../quick-reference/untitled-1.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">index</span></a>

<a href="../../bash-commands.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">List Of Python Cheat Sheets</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Python-Docs</span></span>

<a href="../../stdlib/basic-syntax.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Basic Syntax</span></a>

<a href="../../stdlib/python-standard-library-stdlib.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python Standard Library (STDLIB)</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Docs</span>

<a href="../../stdlib/built-in-functions.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Built In Functions</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Lists</span>

<a href="../../stdlib/dictionaries.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Dictionaries</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Classes</span>

<a href="../../stdlib/queue-and-stacks.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Queue &amp; Stacks</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">MISC</span></span>

<a href="../../interview-prep/interview-resources/unsorted-examples.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Unsorted Examples</span></a>

<a href="../../misc/outline.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Outline</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">About Python</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Interview Prep</span></span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Interview Resources</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Installations Setup & Env</span></span>

<a href="../../installations-setup-and-env/untitled.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">python-setup</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Aux-Exploration</span></span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Subject</span>

<a href="https://www.gitbook.com/?utm_source=content&amp;utm_medium=trademark&amp;utm_campaign=bgoonz42" class="reset-3c756112--trademark-a8da4b94"></a>

<span class="text-4505230f--TextH200-a3425406--textUIFamily-5ebd8e40">Powered by **GitBook**</span>

<span class="text-4505230f--DisplayH900-bfb998fa--textContentFamily-49a318e1">D3-Module 03 - Hash Tables II</span>
==================================================================================================================

<span class="text-4505230f--UIH300-2063425d--textUIFamily-5ebd8e40--text-8ee2c8b2"></span>

<span class="text-4505230f--UIH300-2063425d--textUIFamily-5ebd8e40--text-8ee2c8b2"></span>

<span class="text-4505230f--UIH300-2063425d--textUIFamily-5ebd8e40--text-8ee2c8b2"></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1">Number Bases & Characters</span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="2c09991267664047a9b09b7d6f2bb154"><span data-offset-key="2c09991267664047a9b09b7d6f2bb154:0"><span data-slate-zero-width="n">​</span></span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="d2bc4e3a1c71446491dbe763f72955c7"><span data-offset-key="d2bc4e3a1c71446491dbe763f72955c7:0">Original:</span></span></span>

<a href="https://colab.research.google.com/drive/1WXURLnQJopWW5J-OKxOePd4GTeDM542p?usp=sharing#scrollTo=Um92huhOx2BD" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--embedLink-55aeec7a"></a>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Google Colaboratory</span>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">colab.research.google.com</span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="31f21f222fbb4e418d0fafad10e698cb"><span data-offset-key="31f21f222fbb4e418d0fafad10e698cb:0"><span data-slate-zero-width="n">​</span></span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="6a52900620ce443e9032288a4382d345"><span data-offset-key="6a52900620ce443e9032288a4382d345:0"><span data-slate-zero-width="n">​</span></span></span></span>

<span class="text-4505230f--HeadingH700-04e1a2a3--textContentFamily-49a318e1"><span data-key="d7916f27a7b44190967d570b81d8746b"><span data-offset-key="d7916f27a7b44190967d570b81d8746b:0">Objective 01 - Understand hash collisions and use a linked list for collision resolution in a user-defined Hashable class</span></span></span>

<span class="text-4505230f--HeadingH600-23f228db--textContentFamily-49a318e1"><span data-key="9a413c5de4d74ba09f6cc60d73fd6e7e"><span data-offset-key="9a413c5de4d74ba09f6cc60d73fd6e7e:0">**Overview**</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="46a55f0e961f4ddaacfb6471de6fa0f6"><span data-offset-key="46a55f0e961f4ddaacfb6471de6fa0f6:0">Remember when we wondered what would happen if multiple keys hashed to the same index, and we said that we would worry about it later? Whelp, it's later 🤪.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="fda863aec8b145709c5754579572b77d"><span data-offset-key="fda863aec8b145709c5754579572b77d:0">Let's say we were given the key-value pair </span><span data-offset-key="fda863aec8b145709c5754579572b77d:1">`("Ryan", 10)`</span><span data-offset-key="fda863aec8b145709c5754579572b77d:2">. Our hash code then maps "Ryan" to index 3. Excellent, that works!Now let's say after we inserted </span><span data-offset-key="fda863aec8b145709c5754579572b77d:3">`("Ryan", 10)`</span><span data-offset-key="fda863aec8b145709c5754579572b77d:4">, we have to insert </span><span data-offset-key="fda863aec8b145709c5754579572b77d:5">`("Parth", 12)`</span><span data-offset-key="fda863aec8b145709c5754579572b77d:6">. Our hash code maps "Parth" to index 3. Uh oh! Ryan is already there! What do we do?? 😱</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="40eeeb3246f642c98f9d802bb2391f96"><span data-offset-key="40eeeb3246f642c98f9d802bb2391f96:0">Ok, let's stop freaking out, and let's think about this. If we don't do anything, the value stored at index 3 will just get overwritten. Meaning if we try to retrieve the value associated with </span><span data-offset-key="40eeeb3246f642c98f9d802bb2391f96:1">`"Ryan"`</span><span data-offset-key="40eeeb3246f642c98f9d802bb2391f96:2">, 12 will be returned instead of 10. That might not seem like a big deal, but what if we were returning passwords based on a user ID, and we returned someone else's password. That would be horrible.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="0115dc316c1d45edac07ab1661dd734f"><span data-offset-key="0115dc316c1d45edac07ab1661dd734f:0">Let's fix this problem. The most common way to solve this is with </span><span data-offset-key="0115dc316c1d45edac07ab1661dd734f:1">**chaining**</span><span data-offset-key="0115dc316c1d45edac07ab1661dd734f:2">. If we see multiple values hashed to an index, we will chain them in a some data structure that can hold multiple items. In our case, we'll use Python's </span><span data-offset-key="0115dc316c1d45edac07ab1661dd734f:3">`list`</span><span data-offset-key="0115dc316c1d45edac07ab1661dd734f:4"> type, but a more typical solution would use a linked list. We'll cover linked lists in a future module.</span></span></span>

<figure><img src="https://tk-assets.lambdaschool.com/f952600c-f3e0-4d96-bb53-def08235c9c0_collision.gif" alt="https://tk-assets.lambdaschool.com/f952600c-f3e0-4d96-bb53-def08235c9c0_collision.gif" class="image-52799b3c" /><figcaption><span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1" style="max-width: 100%">https://tk-assets.lambdaschool.com/f952600c-f3e0-4d96-bb53-def08235c9c0_collision.gif</span></figcaption></figure>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="bb8697f0b7cf4ff485421dee769bad42"><span data-offset-key="bb8697f0b7cf4ff485421dee769bad42:0">Ok, sounds ideal? But how does this work in code? Let's write some of it together.</span></span></span>

<span class="text-4505230f--HeadingH600-23f228db--textContentFamily-49a318e1"><span data-key="da7936eaadf94bc49e60751f8985a549"><span data-offset-key="da7936eaadf94bc49e60751f8985a549:0">**Follow Along**</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="f1d346ee83b44a6eb45433fd1a880961"><span data-offset-key="f1d346ee83b44a6eb45433fd1a880961:0">Below is a partially filled out hash table class where we will be using </span><span data-offset-key="f1d346ee83b44a6eb45433fd1a880961:1">`HashTableEntry`</span><span data-offset-key="f1d346ee83b44a6eb45433fd1a880961:2"> as our chain entries.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="21e3b9fdbb1c4758ac8a0108bf65d2a4"><span data-offset-key="21e3b9fdbb1c4758ac8a0108bf65d2a4:0">Take a look at the code below.</span></span></span>

    class HashTableEntry:    """    Hash table key/value pair to go in our collision chain    """    def __init__(self, key, value):        self.key = key        self.value = value​# Hash table can't have fewer than this many slotsMIN_CAPACITY = 8​class HashTable:    """    A hash table with `capacity` buckets    that accepts string keys    Implement this.    """​    def __init__(self, capacity):        self.capacity = capacity  # Number of buckets in the hash table​        self.storage = []        for _ in range(capacity):   # Initialize with empty lists            self.storage.append([])​        self.item_count = 0​    def get_num_slots(self):        """        Return the length of the list you're using to hold the hash table data. (Not the number of items stored in the hash table,        but the number of slots in the main list.)        One of the tests relies on this.        Implement this.        """        # Your code here​    def get_load_factor(self):        """        Return the load factor for this hash table.        Implement this.        """        return len(self.storage)​    def djb2(self, key):        """        DJB2 hash, 32-bit        Implement this, and/or FNV-1.        """        str_key = str(key).encode()​        hash = FNV_offset_basis_64​        for b in str_key:            hash *= FNV_prime_64            hash ^= b            hash &= 0xffffffffffffffff  # 64-bit hash​        return hash​    def hash_index(self, key):        """        Take an arbitrary key and return a valid integer index between within the hash table's storage capacity.        """        return self.djb2(key) % self.capacity​    def put(self, key, value):        """        Store the value with the given key.        Hash collisions should be handled with Linked List Chaining.        Implement this.        """        # Your code here​    def delete(self, key):        """        Remove the value stored with the given key.        Print a warning if the key is not found.        Implement this.        """        # Your code here​    def get(self, key):        """        Retrieve the value stored with the given key.        Returns None if the key is not found.        Implement this.        """        # Your code here

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="95f7bb92659c460da5a27ab9ea1ec173"><span data-offset-key="95f7bb92659c460da5a27ab9ea1ec173:0">Let's implement the </span><span data-offset-key="95f7bb92659c460da5a27ab9ea1ec173:1">`put`</span><span data-offset-key="95f7bb92659c460da5a27ab9ea1ec173:2"> method with collision resolution by chaining. What are the two cases we need to handle?</span></span></span>

1.  <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="6707236c755049bd8bd7df6701f280ab"><span data-offset-key="6707236c755049bd8bd7df6701f280ab:0">**There are no entries at the index**</span><span data-offset-key="6707236c755049bd8bd7df6701f280ab:1">. Great! We can initialize the entry to a list with the new </span><span data-offset-key="6707236c755049bd8bd7df6701f280ab:2">`HashTableEntry`</span><span data-offset-key="6707236c755049bd8bd7df6701f280ab:3"> in it.</span></span></span>

2.  <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="dbc6ac5a31d94705b90f4b511d818fd1"><span data-offset-key="dbc6ac5a31d94705b90f4b511d818fd1:0">**There are multiple entries at the index.**</span><span data-offset-key="dbc6ac5a31d94705b90f4b511d818fd1:1"> We need to check every entry in the chain. If the key in one of the entries is equal to the key we are passing in, we need to replace it. For instance, let's say we pass in </span><span data-offset-key="dbc6ac5a31d94705b90f4b511d818fd1:2">`("Ryan", 12),`</span><span data-offset-key="dbc6ac5a31d94705b90f4b511d818fd1:3"> and then we later pass in </span><span data-offset-key="dbc6ac5a31d94705b90f4b511d818fd1:4">`("Ryan", 15)`</span><span data-offset-key="dbc6ac5a31d94705b90f4b511d818fd1:5">. We would need to replace "Ryan"'s old value with 15. If there are no entries that match, we create a new entry at the end of the chain.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="1386134b50d14bd18df0901245e90c6e"><span data-offset-key="1386134b50d14bd18df0901245e90c6e:0">Ok, that might sound confusing. Let's start breaking it down into code.</span></span></span>

        def put(self, key, value):        """        Store the value with the given key.        Hash collisions should be handled with Linked List Chaining.        Implement this.        """        # Your code here

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="6d7ed539d28f48359b91f6e65f33d635"><span data-offset-key="6d7ed539d28f48359b91f6e65f33d635:0">First, we need to hash the key and start with the first entry at that index.</span></span></span>

        def put(self, key, value):        """        Store the value with the given key.        Hash collisions should be handled with Linked List Chaining.        Implement this.        """        index = self.hash_index(key)​        chain = self.storage[index]

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="35d2fb0d02034836aac8287734fc8a22"><span data-offset-key="35d2fb0d02034836aac8287734fc8a22:0">Next, we need to go through the chain. We need to check two conditions:</span></span></span>

1.  <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="5bb1fa5de95f45c6a438e32c02ca2fe4"><span data-offset-key="5bb1fa5de95f45c6a438e32c02ca2fe4:0">The current entry is not empty.</span></span></span>

2.  <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="dee8fe67e8e84ad7bd696c93c3453161"><span data-offset-key="dee8fe67e8e84ad7bd696c93c3453161:0">The key or the current entry is not equal to the key we are passing in.</span></span></span>

        def put(self, key, value):        """        Store the value with the given key.        Hash collisions should be handled with Linked List Chaining.        Implement this.        """        index = self.hash_index(key)​        chain = self.storage[index]​        existing_entry = None​        for current_entry in chain:            if current_entry.key == key:                exiting_entry = current_entry                break

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="b2425e1c0e5d45f4ac42d2cf71499171"><span data-offset-key="b2425e1c0e5d45f4ac42d2cf71499171:0">Sweet! Now we need to check what happens when the loop breaks. It would only break for two reasons:</span></span></span>

1.  <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="29d91f5b0f2241b4b992b09dc98e2173"><span data-offset-key="29d91f5b0f2241b4b992b09dc98e2173:0">We reached an entry with the same key and need to replace the value.</span></span></span>

2.  <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="29bcf60c312b48888e47b60983313886"><span data-offset-key="29bcf60c312b48888e47b60983313886:0">We reached the end of the chain and need to create a new entry.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="8888feb9054f419b80ba05b22775740a"><span data-offset-key="8888feb9054f419b80ba05b22775740a:0">Let's write that in code!</span></span></span>

        def put(self, key, value):        """        Store the value with the given key.        Hash collisions should be handled with Linked List Chaining.        Implement this.        """        index = self.hash_index(key)​        chain = self.storage[index]​        existing_entry = None​        for current_entry in chain:            if current_entry.key == key:                existing_entry = current_entry                break​        if existing_entry is not None:            existing_entry.value = value        else:            new_entry = HashTableEntry(key, value)            chain.append(new_entry)

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="5339c15836484f9e9b35a1e24ff72c5a"><span data-offset-key="5339c15836484f9e9b35a1e24ff72c5a:0">Great! We created the </span><span data-offset-key="5339c15836484f9e9b35a1e24ff72c5a:1">`put`</span><span data-offset-key="5339c15836484f9e9b35a1e24ff72c5a:2"> method.</span></span></span>

<span class="text-4505230f--HeadingH600-23f228db--textContentFamily-49a318e1"><span data-key="01c40a30dfbb4f18a0d46635625ce0c4"><span data-offset-key="01c40a30dfbb4f18a0d46635625ce0c4:0">**Challenge**</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="f285fe0c492948619b121bc12a800484"><span data-offset-key="f285fe0c492948619b121bc12a800484:0"><span data-slate-zero-width="z">​</span></span></span><a href="https://replit.com/@bgoonz/cs-unit-1-sprint-4-module-2-hash-table-collision-resolution#main.py" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="7ee85f85ec604df5a3eaf49efe5e042d"><span data-offset-key="7ee85f85ec604df5a3eaf49efe5e042d:0">https://replit.com/@bgoonz/cs-unit-1-sprint-4-module-2-hash-table-collision-resolution#main.py</span></span></a><span data-key="a98e5c7a92bf42369f2b131be4e4ba7b"><span data-offset-key="a98e5c7a92bf42369f2b131be4e4ba7b:0"><span data-slate-zero-width="z">​</span></span></span></span>

<figure><img src="https://s3-us-west-2.amazonaws.com/secure.notion-static.com/155e4481-6522-4f77-8cc1-72004e760287/Untitled.png" alt="https://s3-us-west-2.amazonaws.com/secure.notion-static.com/155e4481-6522-4f77-8cc1-72004e760287/Untitled.png" class="image-52799b3c" /><figcaption><span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1" style="max-width: 100%">https://s3-us-west-2.amazonaws.com/secure.notion-static.com/155e4481-6522-4f77-8cc1-72004e760287/Untitled.png</span></figcaption></figure>

<span class="text-4505230f--HeadingH700-04e1a2a3--textContentFamily-49a318e1"><span data-key="01010a4a8dcf454dafa7cc820cede3cc"><span data-offset-key="01010a4a8dcf454dafa7cc820cede3cc:0">Objective 02 - Define and compute the load factor of a hash table and implement a hash table that automatically resizes based on load factor</span></span></span>

<span class="text-4505230f--HeadingH600-23f228db--textContentFamily-49a318e1"><span data-key="603e48f97e79475a866033496204d70d"><span data-offset-key="603e48f97e79475a866033496204d70d:0">**Overview**</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="5865d7fc83f14149b948c92b058f6ecd"><span data-offset-key="5865d7fc83f14149b948c92b058f6ecd:0">What does runtime look like with linked list chaining?</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="ffc5b78cc23a4891ba979e61831dde93"><span data-offset-key="ffc5b78cc23a4891ba979e61831dde93:0">The performance of hash tables for search, insertion, and deletion is constant time (</span><span data-offset-key="ffc5b78cc23a4891ba979e61831dde93:1">`O(1)`</span><span data-offset-key="ffc5b78cc23a4891ba979e61831dde93:2">) in the average case. However, as the chains get longer and longer, in the worst case, those same operations are done in linear time (</span><span data-offset-key="ffc5b78cc23a4891ba979e61831dde93:3">`O(n)`</span><span data-offset-key="ffc5b78cc23a4891ba979e61831dde93:4">). The more collisions that your hash table has, the less performant the hash table is. To avoid collisions, a proper hash function and maintaining a low load factor is crucial. What is a load factor?</span></span></span>

### 

<span class="text-4505230f--HeadingH400-686c0942--textContentFamily-49a318e1"><span data-key="dd38bd4c16984310b24f581336efc566"><span data-offset-key="dd38bd4c16984310b24f581336efc566:0">**Load Factor**</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="17fc4d291e9c4c6f986d067968054a0e"><span data-offset-key="17fc4d291e9c4c6f986d067968054a0e:0">The load factor of a hash table is trivial to calculate. You take the number of items stored in the hash table divided by the number of slots.</span></span></span>

<figure><img src="https://tk-assets.lambdaschool.com/59d00218-52e2-4f3d-9680-2b2d8baad3ae_S5-M3-O1LoadFactor.001.jpeg" alt="https://tk-assets.lambdaschool.com/59d00218-52e2-4f3d-9680-2b2d8baad3ae_S5-M3-O1LoadFactor.001.jpeg" class="image-52799b3c" /><figcaption><span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1" style="max-width: 100%">https://tk-assets.lambdaschool.com/59d00218-52e2-4f3d-9680-2b2d8baad3ae_S5-M3-O1LoadFactor.001.jpeg</span></figcaption></figure>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="66fd1744ebf44ecaa9ace4d246db00ff"><span data-offset-key="66fd1744ebf44ecaa9ace4d246db00ff:0">Hash tables use an array for storage. So, the load factor is the number of occupied slots divided by the length of the array. So, an array of length 10 with three items in it has a load factor of 0.3, and an array of length 20 with twenty items has a load factor of 1. If you use linear probing for collision resolution, then the maximum load factor is 1. If you use chaining for collision resolution, then the load factor can be greater than 1.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="e6007b40507f4796b412631852a64a35"><span data-offset-key="e6007b40507f4796b412631852a64a35:0">As the load factor of your hash table increases, so does the likelihood of a collision, which reduces your hash table's performance. Therefore, you need to monitor the load factor and resize your hash table when the load factor gets too large. The general rule of thumb is to resize your hash table when your load factor is greater than 0.7. Also, when you resize, it is common to double the size of the hash table. When you resize the array, you need to re-insert all of the items into this new hash table. You cannot simply copy the old items into the new hash table. Each item has to be rerun through the hashing function because the hashing function considers the size of the hash table when determining the index that it returns.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="3a90d017225d423098a29e0a830d2a35"><span data-offset-key="3a90d017225d423098a29e0a830d2a35:0">You can see that resizing is an expensive operation, so you don’t want to resize too often. However, when we average it out, hash tables are constant time (</span><span data-offset-key="3a90d017225d423098a29e0a830d2a35:1">`O(1)`</span><span data-offset-key="3a90d017225d423098a29e0a830d2a35:2">) even with resizing.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="faecf31abb1d4164a9b71e6c0360ad52"><span data-offset-key="faecf31abb1d4164a9b71e6c0360ad52:0">The load factor can also be too small. If the hash table is too large for the data that it is storing, then memory is being wasted. So, in addition to resizing, when the load factor gets too high, you should also resize when the load factor gets too low.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="17de747793284ef68dd93ec5cee864bd"><span data-offset-key="17de747793284ef68dd93ec5cee864bd:0">One way to know when to resize your hash table is to compute the load factor whenever an item is inserted or deleted into the hash table. If the load factor is too high or too low, then you need to resize.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="e9e9193b6cf74e778970331defc3cc53"><span data-offset-key="e9e9193b6cf74e778970331defc3cc53:0">We added a </span><span data-offset-key="e9e9193b6cf74e778970331defc3cc53:1">`get_load_factor`</span><span data-offset-key="e9e9193b6cf74e778970331defc3cc53:2"> and </span><span data-offset-key="e9e9193b6cf74e778970331defc3cc53:3">`resize`</span><span data-offset-key="e9e9193b6cf74e778970331defc3cc53:4"> method to calculate the load factor and resize the hash table with a new capacity when necessary.</span></span></span>

    class HashTableEntry:    """    Linked List hash table key/value pair    """    def __init__(self, key, value):        self.key = key        self.value = value        self.next = None​# Hash table can't have fewer than this many slotsMIN_CAPACITY = 8​class HashTable:    """    A hash table with `capacity` buckets    that accepts string keys    Implement this.    """​    def __init__(self, capacity):        self.capacity = capacity  # Number of buckets in the hash table        self.storage = [None] * capacity        self.item_count = 0​    def get_num_slots(self):        """        Return the length of the list you're using to hold the hash        table data. (Not the number of items stored in the hash table,        but the number of slots in the main list.)        One of the tests relies on this.        Implement this.        """        # Your code here​    def get_load_factor(self):        """        Return the load factor for this hash table.        Implement this.        """        return self.item_count / self.capacity​    def resize(self, new_capacity):        """        Changes the capacity of the hash table and        rehashes all key/value pairs.        Implement this.        """        old_storage = self.storage        self.capacity = new_capacity        self.storage = [None] * self.capacity​        current_entry = None​        # Save this because put adds to it, and we don't want that.        # It might be less hackish to pass a flag to put indicating that        # we're in a resize and don't want to modify item count.        old_item_count = self.item_count​        for bucket_item in old_storage:            current_entry = bucket_item            while current_entry is not None:                self.put(current_entry.key, current_entry.value)                current_entry = current_entry.next​        # Restore this to the correct number        self.item_count = old_item_count​    def djb2(self, key):        """        DJB2 hash, 32-bit        Implement this, and/or FNV-1.        """        str_key = str(key).encode()​        hash = FNV_offset_basis_64​        for b in str_key:            hash *= FNV_prime_64            hash ^= b            hash &= 0xffffffffffffffff  # 64-bit hash​        return hash​    def hash_index(self, key):        """        Take an arbitrary key and return a valid integer index        within the hash table's storage capacity.        """        return self.djb2(key) % self.capacity​    def put(self, key, value):        """        Store the value with the given key.        Hash collisions should be handled with Linked List Chaining.        Implement this.        """        index = self.hash_index(key)​        current_entry = self.storage[index]​        while current_entry is not None and current_entry.key != key:            current_entry = current_entry.next​        if current_entry is not None:            current_entry.value = value        else:            new_entry = HashTableEntry(key, value)            new_entry.next = self.storage[index]            self.storage[index] = new_entry​    def delete(self, key):        """        Remove the value stored with the given key.        Print a warning if the key is not found.        Implement this.        """        # Your code here​    def get(self, key):        """        Retrieve the value stored with the given key.        Returns None if the key is not found.        Implement this.        """        # Your code here

<span class="text-4505230f--HeadingH600-23f228db--textContentFamily-49a318e1"><span data-key="bb3f66ce42054b1c8ae5fe484163f5c8"><span data-offset-key="bb3f66ce42054b1c8ae5fe484163f5c8:0">**Follow Along**</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="4bd2bbfd9c7a42758e1bbb6dd7381a1b"><span data-offset-key="4bd2bbfd9c7a42758e1bbb6dd7381a1b:0">Let's change our </span><span data-offset-key="4bd2bbfd9c7a42758e1bbb6dd7381a1b:1">`put`</span><span data-offset-key="4bd2bbfd9c7a42758e1bbb6dd7381a1b:2"> method to resize when the load factor gets too high. Here's how our current </span><span data-offset-key="4bd2bbfd9c7a42758e1bbb6dd7381a1b:3">`put`</span><span data-offset-key="4bd2bbfd9c7a42758e1bbb6dd7381a1b:4"> method looks:</span></span></span>

    def put(self, key, value):    """    Store the value with the given key.    Hash collisions should be handled with Linked List Chaining.    Implement this.    """    index = self.hash_index(key)​    current_entry = self.storage[index]​    while current_entry is not None and current_entry.key != key:        current_entry = current_entry.next​    if current_entry is not None:        current_entry.value = value    else:        new_entry = HashTableEntry(key, value)        new_entry.next = self.storage[index]        self.storage[index] = new_entry

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="5ef2a3855efc47e4a8c9034de2dd250f"><span data-offset-key="5ef2a3855efc47e4a8c9034de2dd250f:0">To know when to resize, we need to correctly increment the count whenever we insert something new into the hash table. Let's go ahead and add that.</span></span></span>

    def put(self, key, value):    """    Store the value with the given key.    Hash collisions should be handled with Linked List Chaining.    Implement this.    """    index = self.hash_index(key)​    current_entry = self.storage[index]​    while current_entry is not None and current_entry.key != key:        current_entry = current_entry.next​    if current_entry is not None:        current_entry.value = value    else:        new_entry = HashTableEntry(key, value)        new_entry.next = self.storage[index]        self.storage[index] = new_entry​        self.item_count += 1

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="3b8bc858b1444876802ca328aaab2898"><span data-offset-key="3b8bc858b1444876802ca328aaab2898:0">Next, we need to check if the load factor is greater than or equal to 0.7. If it is, we need to double our capacity and resize.</span></span></span>

    def put(self, key, value):    """    Store the value with the given key.    Hash collisions should be handled with Linked List Chaining.    Implement this.    """    index = self.hash_index(key)​    current_entry = self.storage[index]​    while current_entry is not None and current_entry.key != key:        current_entry = current_entry.next​    if current_entry is not None:        current_entry.value = value    else:        new_entry = HashTableEntry(key, value)        new_entry.next = self.storage[index]        self.storage[index] = new_entry​        self.item_count += 1​        if self.get_load_factor() > 0.7:            self.resize(self.capacity * 2)

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="5a838fcc1b8943ed961679b2c3bdad39"><span data-offset-key="5a838fcc1b8943ed961679b2c3bdad39:0">Fantastic, we did it!</span></span></span>

<figure><img src="https://s3-us-west-2.amazonaws.com/secure.notion-static.com/18e22e25-8fb5-4763-b92e-ce3ac0d3e4e4/Untitled.png" alt="https://s3-us-west-2.amazonaws.com/secure.notion-static.com/18e22e25-8fb5-4763-b92e-ce3ac0d3e4e4/Untitled.png" class="image-52799b3c" /><figcaption><span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1" style="max-width: 100%">https://s3-us-west-2.amazonaws.com/secure.notion-static.com/18e22e25-8fb5-4763-b92e-ce3ac0d3e4e4/Untitled.png</span></figcaption></figure>

<span class="text-4505230f--HeadingH700-04e1a2a3--textContentFamily-49a318e1"><span data-key="003837c1c9b049aab995f4a5d09e200f"><span data-offset-key="003837c1c9b049aab995f4a5d09e200f:0">Objective 02 - Define and compute the load factor of a hash table and implement a hash table that automatically resizes based on load factor</span></span></span>

<span class="text-4505230f--HeadingH600-23f228db--textContentFamily-49a318e1"><span data-key="9de194b427844935b50363d2a73bb47e"><span data-offset-key="9de194b427844935b50363d2a73bb47e:0">**Overview**</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="56aa93d2f70b4f17be572739944c96ef"><span data-offset-key="56aa93d2f70b4f17be572739944c96ef:0">What does runtime look like with linked list chaining?</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="9d122654afcd42598059e13a2b51e407"><span data-offset-key="9d122654afcd42598059e13a2b51e407:0">The performance of hash tables for search, insertion, and deletion is constant time (</span><span data-offset-key="9d122654afcd42598059e13a2b51e407:1">`O(1)`</span><span data-offset-key="9d122654afcd42598059e13a2b51e407:2">) in the average case. However, as the chains get longer and longer, in the worst case, those same operations are done in linear time (</span><span data-offset-key="9d122654afcd42598059e13a2b51e407:3">`O(n)`</span><span data-offset-key="9d122654afcd42598059e13a2b51e407:4">). The more collisions that your hash table has, the less performant the hash table is. To avoid collisions, a proper hash function and maintaining a low load factor is crucial. What is a load factor?</span></span></span>

### 

<span class="text-4505230f--HeadingH400-686c0942--textContentFamily-49a318e1"><span data-key="18fa3fc0bd894b5589b2fe00598a91d1"><span data-offset-key="18fa3fc0bd894b5589b2fe00598a91d1:0">**Load Factor**</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="ac199a9badeb4f57bf1e4024ef60d8a5"><span data-offset-key="ac199a9badeb4f57bf1e4024ef60d8a5:0">The load factor of a hash table is trivial to calculate. You take the number of items stored in the hash table divided by the number of slots.</span></span></span>

<figure><img src="https://tk-assets.lambdaschool.com/59d00218-52e2-4f3d-9680-2b2d8baad3ae_S5-M3-O1LoadFactor.001.jpeg" alt="https://tk-assets.lambdaschool.com/59d00218-52e2-4f3d-9680-2b2d8baad3ae_S5-M3-O1LoadFactor.001.jpeg" class="image-52799b3c" /><figcaption><span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1" style="max-width: 100%">https://tk-assets.lambdaschool.com/59d00218-52e2-4f3d-9680-2b2d8baad3ae_S5-M3-O1LoadFactor.001.jpeg</span></figcaption></figure>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="be168a87716e4911b52951ab8a14288a"><span data-offset-key="be168a87716e4911b52951ab8a14288a:0">Hash tables use an array for storage. So, the load factor is the number of occupied slots divided by the length of the array. So, an array of length 10 with three items in it has a load factor of 0.3, and an array of length 20 with twenty items has a load factor of 1. If you use linear probing for collision resolution, then the maximum load factor is 1. If you use chaining for collision resolution, then the load factor can be greater than 1.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="8bd237e81af34665b51f7bf3f55317f2"><span data-offset-key="8bd237e81af34665b51f7bf3f55317f2:0">As the load factor of your hash table increases, so does the likelihood of a collision, which reduces your hash table's performance. Therefore, you need to monitor the load factor and resize your hash table when the load factor gets too large. The general rule of thumb is to resize your hash table when your load factor is greater than 0.7. Also, when you resize, it is common to double the size of the hash table. When you resize the array, you need to re-insert all of the items into this new hash table. You cannot simply copy the old items into the new hash table. Each item has to be rerun through the hashing function because the hashing function considers the size of the hash table when determining the index that it returns.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="7202c6f4d6d7442fbbbcd94d6e7f6791"><span data-offset-key="7202c6f4d6d7442fbbbcd94d6e7f6791:0">You can see that resizing is an expensive operation, so you don’t want to resize too often. However, when we average it out, hash tables are constant time (</span><span data-offset-key="7202c6f4d6d7442fbbbcd94d6e7f6791:1">`O(1)`</span><span data-offset-key="7202c6f4d6d7442fbbbcd94d6e7f6791:2">) even with resizing.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="03daf7512ee44ab187577d756c8ef18a"><span data-offset-key="03daf7512ee44ab187577d756c8ef18a:0">The load factor can also be too small. If the hash table is too large for the data that it is storing, then memory is being wasted. So, in addition to resizing, when the load factor gets too high, you should also resize when the load factor gets too low.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="22fec976bc844aa28e2beba891db7539"><span data-offset-key="22fec976bc844aa28e2beba891db7539:0">One way to know when to resize your hash table is to compute the load factor whenever an item is inserted or deleted into the hash table. If the load factor is too high or too low, then you need to resize.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="e828c053757349d69b1878005c5cb0c4"><span data-offset-key="e828c053757349d69b1878005c5cb0c4:0">We added a </span><span data-offset-key="e828c053757349d69b1878005c5cb0c4:1">`get_load_factor`</span><span data-offset-key="e828c053757349d69b1878005c5cb0c4:2"> and </span><span data-offset-key="e828c053757349d69b1878005c5cb0c4:3">`resize`</span><span data-offset-key="e828c053757349d69b1878005c5cb0c4:4"> method to calculate the load factor and resize the hash table with a new capacity when necessary.</span></span></span>

    class HashTableEntry:    """    Linked List hash table key/value pair    """    def __init__(self, key, value):        self.key = key        self.value = value        self.next = None​# Hash table can't have fewer than this many slotsMIN_CAPACITY = 8​class HashTable:    """    A hash table with `capacity` buckets    that accepts string keys    Implement this.    """​    def __init__(self, capacity):        self.capacity = capacity  # Number of buckets in the hash table        self.storage = [None] * capacity        self.item_count = 0​    def get_num_slots(self):        """        Return the length of the list you're using to hold the hash        table data. (Not the number of items stored in the hash table,        but the number of slots in the main list.)        One of the tests relies on this.        Implement this.        """        # Your code here​    def get_load_factor(self):        """        Return the load factor for this hash table.        Implement this.        """        return self.item_count / self.capacity​    def resize(self, new_capacity):        """        Changes the capacity of the hash table and        rehashes all key/value pairs.        Implement this.        """        old_storage = self.storage        self.capacity = new_capacity        self.storage = [None] * self.capacity​        current_entry = None​        # Save this because put adds to it, and we don't want that.        # It might be less hackish to pass a flag to put indicating that        # we're in a resize and don't want to modify item count.        old_item_count = self.item_count​        for bucket_item in old_storage:            current_entry = bucket_item            while current_entry is not None:                self.put(current_entry.key, current_entry.value)                current_entry = current_entry.next​        # Restore this to the correct number        self.item_count = old_item_count​    def djb2(self, key):        """        DJB2 hash, 32-bit        Implement this, and/or FNV-1.        """        str_key = str(key).encode()​        hash = FNV_offset_basis_64​        for b in str_key:            hash *= FNV_prime_64            hash ^= b            hash &= 0xffffffffffffffff  # 64-bit hash​        return hash​    def hash_index(self, key):        """        Take an arbitrary key and return a valid integer index        within the hash table's storage capacity.        """        return self.djb2(key) % self.capacity​    def put(self, key, value):        """        Store the value with the given key.        Hash collisions should be handled with Linked List Chaining.        Implement this.        """        index = self.hash_index(key)​        current_entry = self.storage[index]​        while current_entry is not None and current_entry.key != key:            current_entry = current_entry.next​        if current_entry is not None:            current_entry.value = value        else:            new_entry = HashTableEntry(key, value)            new_entry.next = self.storage[index]            self.storage[index] = new_entry​    def delete(self, key):        """        Remove the value stored with the given key.        Print a warning if the key is not found.        Implement this.        """        # Your code here​    def get(self, key):        """        Retrieve the value stored with the given key.        Returns None if the key is not found.        Implement this.        """        # Your code here

<span class="text-4505230f--HeadingH600-23f228db--textContentFamily-49a318e1"><span data-key="472311849467486eb19e0b55b0467d76"><span data-offset-key="472311849467486eb19e0b55b0467d76:0">**Follow Along**</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="ba562e4fe9cc40cfbe98e2a82f9b6c34"><span data-offset-key="ba562e4fe9cc40cfbe98e2a82f9b6c34:0">Let's change our </span><span data-offset-key="ba562e4fe9cc40cfbe98e2a82f9b6c34:1">`put`</span><span data-offset-key="ba562e4fe9cc40cfbe98e2a82f9b6c34:2"> method to resize when the load factor gets too high. Here's how our current </span><span data-offset-key="ba562e4fe9cc40cfbe98e2a82f9b6c34:3">`put`</span><span data-offset-key="ba562e4fe9cc40cfbe98e2a82f9b6c34:4"> method looks:</span></span></span>

    def put(self, key, value):    """    Store the value with the given key.    Hash collisions should be handled with Linked List Chaining.    Implement this.    """    index = self.hash_index(key)​    current_entry = self.storage[index]​    while current_entry is not None and current_entry.key != key:        current_entry = current_entry.next​    if current_entry is not None:        current_entry.value = value    else:        new_entry = HashTableEntry(key, value)        new_entry.next = self.storage[index]        self.storage[index] = new_entry

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="8dfce6336e6245dbb3cb1835569a772a"><span data-offset-key="8dfce6336e6245dbb3cb1835569a772a:0">To know when to resize, we need to correctly increment the count whenever we insert something new into the hash table. Let's go ahead and add that.</span></span></span>

    def put(self, key, value):    """    Store the value with the given key.    Hash collisions should be handled with Linked List Chaining.    Implement this.    """    index = self.hash_index(key)​    current_entry = self.storage[index]​    while current_entry is not None and current_entry.key != key:        current_entry = current_entry.next​    if current_entry is not None:        current_entry.value = value    else:        new_entry = HashTableEntry(key, value)        new_entry.next = self.storage[index]        self.storage[index] = new_entry​        self.item_count += 1

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="a2cef5b221314502b19e4bcca66a382d"><span data-offset-key="a2cef5b221314502b19e4bcca66a382d:0">Next, we need to check if the load factor is greater than or equal to 0.7. If it is, we need to double our capacity and resize.</span></span></span>

    def put(self, key, value):    """    Store the value with the given key.    Hash collisions should be handled with Linked List Chaining.    Implement this.    """    index = self.hash_index(key)​    current_entry = self.storage[index]​    while current_entry is not None and current_entry.key != key:        current_entry = current_entry.next​    if current_entry is not None:        current_entry.value = value    else:        new_entry = HashTableEntry(key, value)        new_entry.next = self.storage[index]        self.storage[index] = new_entry​        self.item_count += 1​        if self.get_load_factor() > 0.7:            self.resize(self.capacity * 2)

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="2322bdc1cd2540a6b60cb04de7c759f9"><span data-offset-key="2322bdc1cd2540a6b60cb04de7c759f9:0">Fantastic, we did it!</span></span></span>

<span class="text-4505230f--HeadingH600-23f228db--textContentFamily-49a318e1"><span data-key="2105e1cffd464d6f85a834a849e6d0c4"><span data-offset-key="2105e1cffd464d6f85a834a849e6d0c4:0">**Challenge**</span></span></span>

1.  <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="b9d017c09a104850a482a51d4191034e"><span data-offset-key="b9d017c09a104850a482a51d4191034e:0">Do we need to modify our </span><span data-offset-key="b9d017c09a104850a482a51d4191034e:1">`delete`</span><span data-offset-key="b9d017c09a104850a482a51d4191034e:2"> and </span><span data-offset-key="b9d017c09a104850a482a51d4191034e:3">`get`</span><span data-offset-key="b9d017c09a104850a482a51d4191034e:4"> methods to account for the new </span><span data-offset-key="b9d017c09a104850a482a51d4191034e:5">`get_load_factor`</span><span data-offset-key="b9d017c09a104850a482a51d4191034e:6"> and </span><span data-offset-key="b9d017c09a104850a482a51d4191034e:7">`resize`</span><span data-offset-key="b9d017c09a104850a482a51d4191034e:8"> methods? Why or why not?</span></span></span>

<span class="text-4505230f--HeadingH600-23f228db--textContentFamily-49a318e1"><span data-key="6e71ad3986404cec85348d4ac905a206"><span data-offset-key="6e71ad3986404cec85348d4ac905a206:0">**Additional Resources**</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="4c0d2586dd9d41588093f063c14c7b44"><span data-offset-key="4c0d2586dd9d41588093f063c14c7b44:0"><span data-slate-zero-width="z">​</span></span></span><a href="https://courses.csail.mit.edu/6.006/spring11/rec/rec07.pdf" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="d612dece21144a0cb9a2226bae2ef5aa"><span data-offset-key="d612dece21144a0cb9a2226bae2ef5aa:0">https://courses.csail.mit.edu/6.006/spring11/rec/rec07.pdf (Links to an external site.)</span></span></a><span data-key="885390b69b304db5bc2b04a1812bb42b"><span data-offset-key="885390b69b304db5bc2b04a1812bb42b:0"><span data-slate-zero-width="z">​</span></span></span></span>

<a href="untitled-2.html" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--cardPrevious-56a5e674"></a>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">Previous</span>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">D2- Module 02 - Hash Tables I</span>

<a href="untitled.html" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--cardNext-19241c42"></a>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">Next</span>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">D4- Module 04 - Searching and Recursion</span>

<img src="https://avatars.githubusercontent.com/u/66654881?v=4" class="image-67b14f24--avatar-1c1d03ec" />

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">Last updated 25 minutes ago</span>

<a href="https://github.com/bgoonz/python-gitbook/blob/master/cirriculumn/untitled-2/untitled-1.md" class="reset-3c756112--menuItem-aa02f6ec--menuItemLight-757d5235--menuItemInline-173bdf97--pageSideMenuItem-22949732"></a>

<span class="text-4505230f--UIH300-2063425d--textUIFamily-5ebd8e40">Edit on GitHub</span>

<span class="text-4505230f--UIH300-2063425d--textUIFamily-5ebd8e40">Export as PDF</span>

<span class="text-4505230f--InfoH100-1e92e1d1--textContentFamily-49a318e1">Contents</span>

<a href="untitled-1.html#objective-01-understand-hash-collisions-and-use-a-linked-list-for-collision-resolution-in-a-user-defined-hashable-class" class="reset-3c756112--menuItem-aa02f6ec--menuItemLight-757d5235--menuItemInline-173bdf97--pageTocItem-f4427024"></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1"><span class="text-4505230f--UIH200-50ead35f--textContentFamily-49a318e1">Objective 01 - Understand hash collisions and use a linked list for collision resolution in a user-defined Hashable class</span></span>

<a href="untitled-1.html#overview" class="reset-3c756112--menuItem-aa02f6ec--menuItemLight-757d5235--menuItemInline-173bdf97--pageTocItem-f4427024"></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1"><span class="text-4505230f--UIH200-50ead35f--textContentFamily-49a318e1--pageTocLinkH2-2294976c">Overview</span></span>

<a href="untitled-1.html#follow-along" class="reset-3c756112--menuItem-aa02f6ec--menuItemLight-757d5235--menuItemInline-173bdf97--pageTocItem-f4427024"></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1"><span class="text-4505230f--UIH200-50ead35f--textContentFamily-49a318e1--pageTocLinkH2-2294976c">Follow Along</span></span>

<a href="untitled-1.html#challenge" class="reset-3c756112--menuItem-aa02f6ec--menuItemLight-757d5235--menuItemInline-173bdf97--pageTocItem-f4427024"></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1"><span class="text-4505230f--UIH200-50ead35f--textContentFamily-49a318e1--pageTocLinkH2-2294976c">Challenge</span></span>

<a href="untitled-1.html#objective-02-define-and-compute-the-load-factor-of-a-hash-table-and-implement-a-hash-table-that-automatically-resizes-based-on-load-factor" class="reset-3c756112--menuItem-aa02f6ec--menuItemLight-757d5235--menuItemInline-173bdf97--pageTocItem-f4427024"></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1"><span class="text-4505230f--UIH200-50ead35f--textContentFamily-49a318e1">Objective 02 - Define and compute the load factor of a hash table and implement a hash table that automatically resizes based on load factor</span></span>

<a href="untitled-1.html#overview-1" class="reset-3c756112--menuItem-aa02f6ec--menuItemLight-757d5235--menuItemInline-173bdf97--pageTocItem-f4427024"></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1"><span class="text-4505230f--UIH200-50ead35f--textContentFamily-49a318e1--pageTocLinkH2-2294976c">Overview</span></span>

<a href="untitled-1.html#follow-along-1" class="reset-3c756112--menuItem-aa02f6ec--menuItemLight-757d5235--menuItemInline-173bdf97--pageTocItem-f4427024"></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1"><span class="text-4505230f--UIH200-50ead35f--textContentFamily-49a318e1--pageTocLinkH2-2294976c">Follow Along</span></span>

<a href="untitled-1.html#objective-02-define-and-compute-the-load-factor-of-a-hash-table-and-implement-a-hash-table-that-automatically-resizes-based-on-load-factor-1" class="reset-3c756112--menuItem-aa02f6ec--menuItemLight-757d5235--menuItemInline-173bdf97--pageTocItem-f4427024"></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1"><span class="text-4505230f--UIH200-50ead35f--textContentFamily-49a318e1">Objective 02 - Define and compute the load factor of a hash table and implement a hash table that automatically resizes based on load factor</span></span>

<a href="untitled-1.html#overview-2" class="reset-3c756112--menuItem-aa02f6ec--menuItemLight-757d5235--menuItemInline-173bdf97--pageTocItem-f4427024"></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1"><span class="text-4505230f--UIH200-50ead35f--textContentFamily-49a318e1--pageTocLinkH2-2294976c">Overview</span></span>

<a href="untitled-1.html#follow-along-2" class="reset-3c756112--menuItem-aa02f6ec--menuItemLight-757d5235--menuItemInline-173bdf97--pageTocItem-f4427024"></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1"><span class="text-4505230f--UIH200-50ead35f--textContentFamily-49a318e1--pageTocLinkH2-2294976c">Follow Along</span></span>

<a href="untitled-1.html#challenge-1" class="reset-3c756112--menuItem-aa02f6ec--menuItemLight-757d5235--menuItemInline-173bdf97--pageTocItem-f4427024"></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1"><span class="text-4505230f--UIH200-50ead35f--textContentFamily-49a318e1--pageTocLinkH2-2294976c">Challenge</span></span>

<a href="untitled-1.html#additional-resources" class="reset-3c756112--menuItem-aa02f6ec--menuItemLight-757d5235--menuItemInline-173bdf97--pageTocItem-f4427024"></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1"><span class="text-4505230f--UIH200-50ead35f--textContentFamily-49a318e1--pageTocLinkH2-2294976c">Additional Resources</span></span>
